Created the float layout

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-* {
+*,
+::after,
+::before {
   /* border-top: 10px solid #1098ad; */
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -14,25 +17,18 @@ body {
 }
 
 .container {
-  width: 800px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  width: 90rem;
   margin: 0 auto;
 }
 
 .main-header {
   background-color: #f7f7f7;
-  /* padding: 20px;
-  padding-left: 40px;
-  padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
-  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
-  /* text-align: center; */
 }
 
 article {
@@ -41,15 +37,12 @@ article {
 
 .post-header {
   margin-bottom: 40px;
-  /* position: relative; */
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  /* padding-top: 50px;
-  padding-bottom: 50px; */
   padding: 50px 0;
   width: 500px;
 }
@@ -92,27 +85,18 @@ p {
 
 ul,
 ol {
-  margin-left: 50px;
+  /* margin-left: 50px; */
   margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
   margin-bottom: 10px;
-  /* display: inline; */
 }
 
 li:last-child {
   margin-bottom: 0;
 }
-
-/* footer p {
-  font-size: 16px;
-} */
-
-/* article header p {
-  font-style: italic;
-} */
 
 #author {
   font-style: italic;
@@ -128,21 +112,9 @@ li:last-child {
   font-weight: bold;
 }
 
-/* ul {
-  list-style: none;
-} */
-
 .related {
   list-style: none;
 }
-
-body {
-  /* background-color: orangered; */
-}
-
-/* .first-li {
-  font-weight: bold;
-} */
 
 li:first-child {
   font-weight: bold;
@@ -152,15 +124,6 @@ li:last-child {
   font-style: italic;
 }
 
-li:nth-child(even) {
-  /* color: red; */
-}
-
-/* Misconception: this won't work! */
-article p:first-child {
-  color: red;
-}
-
 /* Styling links */
 a:link {
   color: #1098ad;
@@ -168,7 +131,6 @@ a:link {
 }
 
 a:visited {
-  /* color: #777; */
   color: #1098ad;
 }
 
@@ -182,20 +144,14 @@ a:active {
   background-color: black;
   font-style: italic;
 }
-/* LVHA */
 
+/* LVHA */
 .post-img {
   width: 100%;
   height: auto;
 }
 
 nav a:link {
-  /* background-color: orangered;
-  margin: 20px;
-  padding: 20px;
-
-  display: block; */
-
   margin-right: 30px;
   margin-top: 10px;
   display: inline-block;
@@ -209,10 +165,7 @@ button {
   font-size: 22px;
   padding: 20px;
   cursor: pointer;
-
   position: absolute;
-  /* top: 50px;
-  left: 50px; */
   bottom: 50px;
   right: 50px;
 }
@@ -222,12 +175,7 @@ h1::first-letter {
   margin-right: 5px;
 }
 
-h3 + p::first-line {
-  /* color: red; */
-}
-
 h2 {
-  /* background-color: orange; */
   position: relative;
 }
 
@@ -244,24 +192,50 @@ h2::before {
   right: -25px;
 }
 
-/* Resolving conflicts */
-/* #copyright {
-  color: red;
+/* FLOATS */
+.author-img {
+  float: left;
+  margin-bottom: 1.25rem;
 }
 
-.copyright {
-  color: blue;
+.author {
+  float: left;
+  margin-left: 1rem;
+  margin-top: 0.75rem;
 }
 
-.text {
-  color: yellow;
+h1 {
+  float: left;
 }
 
-footer p {
-  color: green !important;
-} */
+nav {
+  float: right;
+}
 
-/* nav a:link,
-nav p {
-  font-size: 18px;
-} */
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+article {
+  float: left;
+  width: 70%;
+}
+
+aside {
+  margin-top: 9rem;
+  float: right;
+  width: 28%;
+  padding: 2rem 1rem;
+}
+
+h4 {
+  margin-bottom: 1.5rem;
+}
+
+footer {
+  clear: both;
+  text-align: center;
+  color: gray;
+}
